# git-darcs

./: README.md  git_darcs.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  test.yml
