[tool.poetry]
name = "git-darcs"
version = "0.1.0"
description = "Incremental import of git into darcs"
authors = ["Jean-Louis Fuchs <jean-louis.fuchs@adfinis.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.scripts]
git-darcs = 'git_darcs:main'

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
pdbpp = "^0.10.3"
black = "^22.6.0"
isort = "^5.10.1"
python-lsp-server = "^1.5.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"
flake8-debugger = "^4.1.2"
flake8-isort = "^4.2.0"
flake8-docstrings = "^1.6.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
