[tool.poetry]
name = "git-darcs"
version = "0.6.0"
description = "Incremental import of git into darcs"
authors = ["Jean-Louis Fuchs <jean-louis.fuchs@adfinis.com>"]
license = "AGPL-3.0-or-later"
homepage = "https://github.com/ganwell/git-darcs"
repository = "https://github.com/ganwell/git-darcs"
keywords = ["git", "darcs", "import", "incremental"]
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control",
]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
git-darcs = 'git_darcs:main'

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.0"
click = "^8.1.3"
Flake8-pyproject = "^1.1.0.post0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
pdbpp = "^0.10.3"
black = "^22.6.0"
isort = "^5.10.1"
python-lsp-server = "^1.5.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"
flake8-debugger = "^4.1.2"
flake8-isort = "^4.2.0"
flake8-docstrings = "^1.6.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 160
